environments/istio/basic-demo/httpbin/base/active/httpbin-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    istio.io/rev: 1-16
  annotations:
    argocd.argoproj.io/sync-wave: "-5"
