environments/istio/basic-demo/httpbin/base/active/httpbin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
  namespace: httpbin
spec:
  hosts:
  - "httpbin-local.glootest.com"
  gateways:
  - istio-system/https-gateway
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 8000
